--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Hello</title>
+    <p><a href="/about.html">About this site</a></p>
   </head>
   <body style="font:16px/1.4 system-ui; max-width:650px; margin:40px auto;">
     <h1>Hello, world 👋</h1>
